--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,6 +117,23 @@ services:
       options:
         max-size: 10m
         max-file: "3"
+  links:
+    container_name: deep-perception
+    image: deepf/perception:main
+    networks:
+      - network
+    ports:
+    - "3007:3007"
+    restart: always
+    pull_policy: always
+    extra_hosts: ['host.docker.internal:host-gateway']
+    environment:
+      - 'NEXT_PUBLIC_GRAPHQL_URL=${NEXT_PUBLIC_GQL_PATH}'
+    logging:
+      driver: "json-file"
+      options:
+        max-size: 10m
+        max-file: "3"
 volumes:
   db-data:
     name: deep-db-data
