--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.505",
+  "version": "0.0.506",
   "license": "Unlicense",
   "type": "module",
+  "main": "import.js",
   "scripts": {
     "dev": "(cd local && docker compose down || true) && cross-env PORT=3006 npm run launch",
     "dev-local": "(cd local && docker compose down || true) && cross-env npm_config_yes=true JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" MIGRATIONS_HASURA_PATH=localhost:8080 MIGRATIONS_HASURA_SSL=0 MIGRATIONS_HASURA_SECRET=myadminsecretkey MIGRATIONS_DEEPLINKS_URL=http://host.docker.internal:3006 DEEPLINKS_HASURA_PATH=localhost:8080 DEEPLINKS_HASURA_SSL=0 DEEPLINKS_HASURA_SECRET=myadminsecretkey PORT=3006 npm run launch",
@@ -31,7 +32,7 @@
     "start-deeplinks-docker": "docker compose pull && docker compose -p deep up -d",
     "stop-deeplinks-docker": "docker compose -p deep down",
     "snapshot:create": "node snapshots/create.js",
-  "snapshot:last": "node snapshots/last.js",
+    "snapshot:last": "node snapshots/last.js",
     "snapshot:dump": "node snapshots/dump.js",
     "warmup": "node warmup.js",
     "start": "node call.mjs"
