--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,6 +112,7 @@ services:
       - 'DEEPLINKS_HASURA_SSL=${DEEPLINKS_HASURA_SSL}'
       - 'DEEPLINKS_HASURA_SECRET=${DEEPLINKS_HASURA_SECRET}'
       - 'JWT_SECRET=${DEEP_HASURA_GRAPHQL_JWT_SECRET}'
+      - 'DEEPLINKS_HASURA_STORAGE_URL=${DEEPLINKS_HASURA_STORAGE_URL}'
     logging:
       driver: "json-file"
       options:
