--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -28,8 +28,4 @@ tasks:
   - init: |
       npm ci
       npm run build
-      npm start -- --generate --up
-  # - command: |
-  #     ./ensure-node-version.sh
-  #     . ~/.nvm/nvm.sh && nvm use
-  #     ./wait-for-prebuild.sh && (npm run gitpod-start | tee gitpod-start.log.txt);
+      npm start -- --generate --up --snapshot
