--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.534",
+  "version": "0.0.535",
   "license": "Unlicense",
   "type": "module",
   "main": "import.js",
@@ -35,7 +35,8 @@
     "snapshot:last": "node snapshots/last.js",
     "snapshot:dump": "node snapshots/dump.js",
     "warmup": "node warmup.js",
-    "start": "node call.mjs"
+    "start": "node call.mjs",
+    "nexe": "cat call.mjs | nexe -t 18.20.4 --build"
   },
   "bin": {
     "deeplinks": "./call.mjs"
@@ -98,6 +99,7 @@
     "microtime": "^3.1.1",
     "moesif-nodejs": "^3.3.3",
     "multer": "^1.4.5-lts.1",
+    "nexe": "^4.0.0-rc.6",
     "node-fetch": "^2.6.11",
     "nodemon": "^2.0.22",
     "prompt": "^1.3.0",
