--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,6 +113,7 @@ services:
       - 'DEEPLINKS_HASURA_SECRET=${DEEPLINKS_HASURA_SECRET}'
       - 'JWT_SECRET=${DEEP_HASURA_GRAPHQL_JWT_SECRET}'
       - 'DEEPLINKS_HASURA_STORAGE_URL=${DEEPLINKS_HASURA_STORAGE_URL}'
+      - 'DEEPLINKS_PUBLIC_URL=${DEEPLINKS_PUBLIC_URL}'
     logging:
       driver: "json-file"
       options:
