--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.551",
+  "version": "0.0.552",
   "license": "Unlicense",
   "type": "module",
   "main": "import.js",
@@ -66,6 +66,7 @@
     "helia": "^2.1.0",
     "internal-ip": "^6.2.0",
     "jsonwebtoken": "^9.0.0",
+    "match-sorter": "^6.3.4",
     "moesif-nodejs": "^3.3.3",
     "nexe": "^4.0.0-rc.6",
     "node-fetch": "^2.6.11",
