--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,10 +62,14 @@ services:
     extra_hosts: ['host.docker.internal:host-gateway']
     environment:
       - 'PORT=8000'
+      - 'HASURA_METADATA=1'
+      - 'HASURA_ENDPOINT=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
+      - 'HASURA_GRAPHQL_ADMIN_SECRET=${DEEP_HASURA_STORAGE_HASURA_GRAPHQL_ADMIN_SECRET}'
+      - 'POSTGRES_MIGRATIONS=1'
+      - 'POSTGRES_MIGRATIONS_SOURCE=${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS_SOURCE}'
       - 'DATABASE_URL=${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS_SOURCE}'
       - 'GRAPHQL_ENGINE_BASE_URL=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
       - 'GRAPHQL_ENDPOINT=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
-      - 'HASURA_GRAPHQL_ADMIN_SECRET=${DEEP_HASURA_STORAGE_HASURA_GRAPHQL_ADMIN_SECRET}'
       - 'JWT_SECRET=${DEEP_HASURA_GRAPHQL_JWT_SECRET}'
     command: serve
     logging:
