--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,12 +65,18 @@ services:
       - 'HASURA_METADATA=1'
       - 'HASURA_ENDPOINT=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
       - 'HASURA_GRAPHQL_ADMIN_SECRET=${DEEP_HASURA_STORAGE_HASURA_GRAPHQL_ADMIN_SECRET}'
+      - 'S3_ENDPOINT: http://deep-minio:9000'
+      - 'S3_ACCESS_KEY: ${DEEP_MINIO_ROOT_USER}'
+      - 'S3_SECRET_KEY: ${DEEP_MINIO_ROOT_PASSWORD}'
+      - 'S3_BUCKET: "default"'
+      - 'S3_ROOT_FOLDER: "f215cf48-7458-4596-9aa5-2159fc6a3caf"'
       - 'POSTGRES_MIGRATIONS=1'
       - 'POSTGRES_MIGRATIONS_SOURCE=${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS_SOURCE}'
       - 'DATABASE_URL=${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS_SOURCE}'
       - 'GRAPHQL_ENGINE_BASE_URL=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
       - 'GRAPHQL_ENDPOINT=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
       - 'JWT_SECRET=${DEEP_HASURA_GRAPHQL_JWT_SECRET}'
+      - 'CLAMAV_SERVER: tcp://deep-clamd:3310'
     command: serve
     logging:
       driver: "json-file"
@@ -143,6 +149,12 @@ services:
       options:
         max-size: 10m
         max-file: "3"
+  clamd:
+    container_name: deep-clamd
+    image: nhost/clamav:0.1.2
+    restart: unless-stopped
+    ports:
+      - '3310:3310'
 volumes:
   db-data:
     name: deep-db-data
