--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
     extra_hosts: ['host.docker.internal:host-gateway']
     environment:
       - 'PORT=8000'
-      - 'HASURA_METADATA=1'
+      # - 'HASURA_METADATA=1'
       - 'HASURA_ENDPOINT=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
       - 'HASURA_GRAPHQL_ADMIN_SECRET=${DEEP_HASURA_STORAGE_HASURA_GRAPHQL_ADMIN_SECRET}'
       - 'S3_ENDPOINT: http://deep-minio:9000'
@@ -76,7 +76,7 @@ services:
       - 'GRAPHQL_ENGINE_BASE_URL=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
       - 'GRAPHQL_ENDPOINT=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
       - 'JWT_SECRET=${DEEP_HASURA_GRAPHQL_JWT_SECRET}'
-      - 'CLAMAV_SERVER: tcp://deep-clamd:3310'
+      # - 'CLAMAV_SERVER: tcp://deep-clamd:3310'
     command: serve
     logging:
       driver: "json-file"
@@ -149,12 +149,12 @@ services:
       options:
         max-size: 10m
         max-file: "3"
-  clamd:
-    container_name: deep-clamd
-    image: nhost/clamav:0.1.2
-    restart: unless-stopped
-    ports:
-      - '3310:3310'
+  # clamd:
+  #   container_name: deep-clamd
+  #   image: nhost/clamav:0.1.2
+  #   restart: unless-stopped
+  #   ports:
+  #     - '3310:3310'
 volumes:
   db-data:
     name: deep-db-data
