--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
     extra_hosts: ['host.docker.internal:host-gateway']
     environment:
       - 'PORT=8000'
+      - 'DEBUG:1'
       # - 'HASURA_METADATA=1'
       - 'HASURA_ENDPOINT=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
       - 'HASURA_GRAPHQL_ADMIN_SECRET=${DEEP_HASURA_STORAGE_HASURA_GRAPHQL_ADMIN_SECRET}'
