--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,23 +61,23 @@ services:
       - "${DEEP_HASURA_STORAGE_PORT}:8000"
     extra_hosts: ['host.docker.internal:host-gateway']
     environment:
-      - 'PORT=8000'
-      - 'DEBUG:1'
-      # - 'HASURA_METADATA=1'
-      - 'HASURA_ENDPOINT=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
-      - 'HASURA_GRAPHQL_ADMIN_SECRET=${DEEP_HASURA_STORAGE_HASURA_GRAPHQL_ADMIN_SECRET}'
-      - 'S3_ENDPOINT: http://deep-minio:9000'
-      - 'S3_ACCESS_KEY: ${DEEP_MINIO_ROOT_USER}'
-      - 'S3_SECRET_KEY: ${DEEP_MINIO_ROOT_PASSWORD}'
-      - 'S3_BUCKET: "default"'
-      - 'S3_ROOT_FOLDER: "f215cf48-7458-4596-9aa5-2159fc6a3caf"'
-      - 'POSTGRES_MIGRATIONS=0'
-      - 'POSTGRES_MIGRATIONS_SOURCE=${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS_SOURCE}'
-      - 'DATABASE_URL=${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS_SOURCE}'
-      - 'GRAPHQL_ENGINE_BASE_URL=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
-      - 'GRAPHQL_ENDPOINT=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}'
-      - 'JWT_SECRET=${DEEP_HASURA_GRAPHQL_JWT_SECRET}'
-      # - 'CLAMAV_SERVER: tcp://deep-clamd:3310'
+      PORT: 8000
+      DEBUG: 1
+      # HASURA_METADATA: 1
+      HASURA_ENDPOINT: ${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}
+      HASURA_GRAPHQL_ADMIN_SECRET: ${DEEP_HASURA_STORAGE_HASURA_GRAPHQL_ADMIN_SECRET}
+      S3_ENDPOINT: http://deep-minio:9000
+      S3_ACCESS_KEY: ${DEEP_MINIO_ROOT_USER}
+      S3_SECRET_KEY: ${DEEP_MINIO_ROOT_PASSWORD}
+      S3_BUCKET: "default"
+      S3_ROOT_FOLDER: "f215cf48-7458-4596-9aa5-2159fc6a3caf"
+      POSTGRES_MIGRATIONS: 0
+      POSTGRES_MIGRATIONS_SOURCE: ${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS_SOURCE}
+      DATABASE_URL: ${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS_SOURCE}
+      GRAPHQL_ENGINE_BASE_URL: ${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}
+      GRAPHQL_ENDPOINT: ${DEEP_HASURA_STORAGE_HASURA_ENDPOINT}
+      JWT_SECRET: ${DEEP_HASURA_GRAPHQL_JWT_SECRET}
+      # CLAMAV_SERVER: tcp://deep-clamd:3310
     command: serve
     logging:
       driver: "json-file"
