--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,7 +143,7 @@ services:
     environment:
       - 'NEXT_PUBLIC_GRAPHQL_URL=${NEXT_PUBLIC_GQL_PATH}'
       - 'SECRET=${DEEPLINKS_HASURA_SECRET}'
-      - 'GQL=${NEXT_PUBLIC_GQL_PATH}'
+      - 'GQL=${DOCKER_GQL_URL}'
       - 'SSL=${NEXT_PUBLIC_GQL_SSL}'
     logging:
       driver: "json-file"
